fixed queue on mobile view

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -205,6 +205,7 @@ margin: 0.5rem 0 0.5rem 0;
   padding-left: 5%;
   padding-top: 2%;
   font-size: 25px;
+  min-height: 1.2rem;
   border-bottom: 2px solid #394424;
 }
 
@@ -240,6 +241,9 @@ margin: 0.5rem 0 0.5rem 0;
 
 .queue_songlist li{
     border-bottom: 1px solid #394424;
+    min-height:1rem;
+    display: flex;
+    align-items: center;
 }
 
 .queue_songlist::-webkit-scrollbar {
